--- a/app/src/main/res/layout/activity_lesson_list.xml
+++ b/app/src/main/res/layout/activity_lesson_list.xml
@@ -9,8 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:id="@+id/lvlesson"
+            />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
