--- a/app/src/main/res/menu/main_navigation_view.xml
+++ b/app/src/main/res/menu/main_navigation_view.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_profile"
+            android:title="Личный кабинет" />
+        <item
             android:id="@+id/nav_project"
             android:title="Проекты" />
         <item
