Добавлено отображение списка CV

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -36,6 +36,7 @@
 
             <ImageView
                 android:id="@+id/user_photo"
+                android:src="@drawable/profile"
                 android:layout_width="100dp"
                 android:layout_height="100dp" />
 
