--- a/app/src/main/res/layout/activity_peoples.xml
+++ b/app/src/main/res/layout/activity_peoples.xml
@@ -31,7 +31,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/list_peoples"></ListView>
+            android:id="@+id/list_peoples" />
 
     </LinearLayout>
 
