--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -28,7 +28,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:id="@+id/logo"
+        android:id="@+id/photo"
         android:layout_width="match_parent"
         android:layout_height="184dp"
         app:srcCompat="@mipmap/ic_launcher" />
