--- a/app/src/main/res/layout/project_item.xml
+++ b/app/src/main/res/layout/project_item.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/photo"
             android:layout_width="130dp"
             android:layout_height="137dp"
             app:srcCompat="@mipmap/ic_launcher" />
