--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,6 +48,7 @@
 
                 <TextView
                     android:text="ФИО"
+                    android:textColor="#000"
                     android:textSize="25sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
 
                 <TextView
                     android:text="Рейтинг"
+                    android:textColor="#000"
                     android:textSize="20sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -69,8 +71,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="#000"
             android:text="Описание"
             android:id="@+id/user_description" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="20sp"
+            android:text="Вы можете уже сегодня создать свой стартап или стать инвестором! А так же вам доступно нахождение новых сотрудников в разделе Люди"/>
 
     </LinearLayout>
 
