--- a/app/src/main/res/layout/dialog_add_cv.xml
+++ b/app/src/main/res/layout/dialog_add_cv.xml
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cv_description"
+        android:lines="3"
         android:hint="Описание" />
 
     <LinearLayout
