--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -42,7 +42,7 @@
         android:textSize="36sp" />
 
     <TextView
-        android:id="@+id/budget"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Бюджет"
