--- a/app/src/main/res/layout/project_item.xml
+++ b/app/src/main/res/layout/project_item.xml
@@ -58,7 +58,7 @@
         android:textSize="36sp" />
 
     <TextView
-        android:id="@+id/budget"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Необходимый бюджет"
