--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -28,36 +28,46 @@
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
+        android:layout_margin="16dp"
         android:id="@+id/photo"
-        android:layout_width="match_parent"
-        android:layout_height="184dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Подробное описание"
         android:textColor="#000000"
-        android:textSize="36sp" />
+        android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/description"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:id="@+id/budget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Бюджет"
         android:textColor="#000000"
-        android:textSize="36sp" />
+        android:textSize="20sp" />
 
     <TextView
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:id="@+id/infoAuthor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Инфа о челе"
         android:textColor="#000000"
-        android:textSize="36sp" />
+        android:textSize="20sp" />
 
     <ListView
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:id="@+id/listDoc"
         android:layout_width="match_parent"
         android:layout_height="288dp" />
@@ -67,7 +77,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:clickable="true"
-        app:srcCompat="@android:color/holo_red_dark" />
+        android:src="@drawable/plus_icon" />
 
 </LinearLayout>
