--- a/app/src/main/res/layout/project_item.xml
+++ b/app/src/main/res/layout/project_item.xml
@@ -1,90 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
+    android:layout_height="match_parent">
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        card_view:cardBackgroundColor="@color/colorPrimary"
+        android:layout_margin="16dp"
+        android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="130dp"
-            android:layout_height="137dp"
-            app:srcCompat="@mipmap/ic_launcher" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="137dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Название"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                android:orientation="vertical"
+                android:layout_marginBottom="16dp">
 
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Автор"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Область/Тематика"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                    <ImageView
+                        android:id="@+id/photo"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="16dp"
+                        android:src="@mipmap/ic_launcher_round" />
 
-        </LinearLayout>
-    </LinearLayout>
+                    <LinearLayout
+                        android:layout_margin="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ОПИСАНИЕ"
-        android:textColor="#000000"
-        android:textSize="36sp" />
+                        <TextView
+                            android:id="@+id/title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Название"
+                            android:textColor="#000000"
+                            android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Необходимый бюджет"
-        android:textColor="#000000"
-        android:textSize="36sp" />
+                        <TextView
+                            android:id="@+id/author"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Автор"
+                            android:textSize="20sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/category"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Область/Тематика"
+                            android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/rate"
-            android:layout_width="359dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.8"
-            android:text="Рейтинг"
-            android:textColor="#070707"
-            android:textSize="36sp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ОПИСАНИЕ"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/budget"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Необходимый бюджет"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/rate"
+                    android:layout_width="359dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.8"
+                    android:text="Рейтинг"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            app:srcCompat="@android:color/holo_red_dark" />
-    </LinearLayout>
+            android:layout_gravity="right|bottom"
+            android:layout_margin="5dp"
+            android:src="@drawable/info_icon" />
 
+    </android.support.v7.widget.CardView>
 </LinearLayout>
