--- a/app/src/main/res/layout/lesson_layout.xml
+++ b/app/src/main/res/layout/lesson_layout.xml
@@ -18,17 +18,19 @@
             android:orientation="vertical">
 
             <ImageView
+                android:layout_margin="5dp"
                 android:id="@+id/elementImg"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:src="@drawable/profile" />
 
             <TextView
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:id="@+id/elementTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="0.8"
                 android:gravity="center_vertical"
                 android:text="Пример"
                 android:textAlignment="center"
@@ -37,8 +39,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.8">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/elementDesc"
@@ -56,9 +57,9 @@
                     android:id="@+id/moreInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
+                    android:layout_margin="5dp"
                     android:clickable="true"
-                    card_view:srcCompat="@color/design_default_color_primary" />
+                    android:src="@drawable/visibility_icon" />
 
             </LinearLayout>
 
