--- a/app/src/main/res/layout/activity_lesson_list.xml
+++ b/app/src/main/res/layout/activity_lesson_list.xml
@@ -51,7 +51,7 @@
     </android.support.v4.widget.DrawerLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_add_cv"
+        android:id="@+id/btn_add_lesson"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
