--- a/app/src/main/res/layout/investor_item_layout.xml
+++ b/app/src/main/res/layout/investor_item_layout.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        card_view:cardBackgroundColor="@color/colorPrimary"
+        android:layout_margin="16dp"
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -21,9 +25,10 @@
 
                 <ImageView
                     android:id="@+id/logo"
-                    android:layout_width="108dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_margin="16dp"
+                    android:src="@mipmap/ic_launcher_round" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -35,31 +40,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Название"
-                        android:textSize="36sp" />
+                        android:textColor="#000000"
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/category"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Категории"
-                        android:textSize="36sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/description"
+                android:id="@+id/budget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Готовность по бюджету"
-                android:textSize="36sp" />
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Описание"
-                android:textSize="36sp" />
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,8 +81,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.8"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:text="Рейтинг"
-                    android:textSize="36sp" />
+                    android:textSize="20sp" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/info"
@@ -80,7 +92,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:clickable="true"
-                    app:srcCompat="@android:color/background_dark" />
+                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/info_icon"/>
             </LinearLayout>
 
         </LinearLayout>
