--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,12 +47,12 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:text="ФИО"
-                    android:textColor="#000"
-                    android:textSize="25sp"
+                    android:id="@+id/user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/user_name" />
+                    android:text="ФИО"
+                    android:textColor="#000"
+                    android:textSize="25sp" />
 
                 <TextView
                     android:text="Рейтинг"
