--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -13,9 +13,9 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <ImageView
                 android:id="@+id/btn_back"
@@ -27,59 +27,85 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ImageView
-        android:layout_margin="16dp"
-        android:id="@+id/photo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
-        app:srcCompat="@mipmap/ic_launcher" />
-
-    <TextView
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:id="@+id/description"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Подробное описание"
-        android:textColor="#000000"
-        android:textSize="25sp" />
+        android:layout_height="578dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:id="@+id/budget"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Бюджет"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="16dp"
+            app:srcCompat="@mipmap/ic_launcher" />
 
-    <TextView
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:id="@+id/infoAuthor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Инфа о челе"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Подробное описание"
+            android:textColor="#000000"
+            android:textSize="25sp" />
 
-    <ListView
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:id="@+id/listDoc"
-        android:layout_width="match_parent"
-        android:layout_height="288dp" />
+        <TextView
+            android:id="@+id/budget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Бюджет"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/contact"
+        <TextView
+            android:id="@+id/infoAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Инфа о челе"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <ListView
+            android:id="@+id/listDoc"
+            android:layout_width="match_parent"
+            android:layout_height="285dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
+        </ListView>
+    </LinearLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        android:src="@drawable/plus_icon" />
+        android:layout_height="77dp"
+        android:orientation="horizontal">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/money"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|left"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            android:clickable="true"
+            android:src="@drawable/money_icon" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/contact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="bottom|right"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="16dp"
+            android:clickable="true"
+            android:src="@drawable/plus_icon" />
+
+    </RelativeLayout>
 
 </LinearLayout>
