--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -41,6 +41,16 @@
             app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
+            android:id="@+id/category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Области/тематика"
+            android:textColor="#000000"
+            android:textSize="25sp" />
+
+        <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
