--- a/app/src/main/res/layout/adapter_peoples.xml
+++ b/app/src/main/res/layout/adapter_peoples.xml
@@ -18,6 +18,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_margin="5dp"
                 android:id="@+id/cv_img"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -37,7 +38,7 @@
                     android:text="Пример"
                     android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="14dp"
+                    android:textSize="20sp"
                     android:layout_margin="16dp" />
 
                 <TextView
@@ -47,8 +48,9 @@
                     android:text="Описание"
                     android:textAlignment="center"
                     android:textColor="#fff"
-                    android:layout_margin="16dp"
-                    android:textSize="14dp" />
+                    android:layout_marginEnd="70dp"
+                    android:layout_marginStart="16dp"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -60,7 +62,8 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:src="@drawable/visibility_icon"
-            android:layout_margin="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_gravity="end|bottom" />
 
     </android.support.v7.widget.CardView>
