--- a/app/src/main/res/layout/document_small_info_layout.xml
+++ b/app/src/main/res/layout/document_small_info_layout.xml
@@ -2,17 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp">
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="143dp"
-        android:layout_height="96dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:srcCompat="@android:color/black" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_margin="5dp"
         android:text="TextView" />
 </LinearLayout>
