--- a/app/src/main/res/layout/history_budget_layout.xml
+++ b/app/src/main/res/layout/history_budget_layout.xml
@@ -9,8 +9,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="163dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5dp">
 
             <TextView
                 android:id="@+id/title"
@@ -18,15 +19,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="TextView"
-                android:textSize="18sp" />
+                android:textColor="#000"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/budget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_weight="0.5"
-                android:foregroundGravity="right"
                 android:text="TextView"
                 android:textSize="18sp" />
         </LinearLayout>
