--- a/app/src/main/res/layout/investition_item.xml
+++ b/app/src/main/res/layout/investition_item.xml
@@ -5,22 +5,32 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="5dp">
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="205dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="36sp" />
+            android:textColor="#000"
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/budget"
-            android:layout_width="205dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:foregroundGravity="right"
             android:text="TextView"
-            android:textSize="36sp" />
+            android:textSize="20sp" />
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
