--- a/app/src/main/res/layout/lesson_layout.xml
+++ b/app/src/main/res/layout/lesson_layout.xml
@@ -21,12 +21,14 @@
                 android:layout_margin="5dp"
                 android:id="@+id/elementImg"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/profile" />
 
             <TextView
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
                 android:id="@+id/elementTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -35,11 +37,12 @@
                 android:text="Пример"
                 android:textAlignment="center"
                 android:textColor="#fff"
-                android:textSize="14dp" />
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/elementDesc"
@@ -48,10 +51,11 @@
                     android:layout_gravity="center_vertical"
                     android:layout_weight="0.8"
                     android:gravity="center_vertical"
-                    android:text=""
+                    android:text="123"
                     android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="14dp" />
+                    android:layout_margin="5dp"
+                    android:textSize="16sp" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/moreInfo"
