--- a/app/src/main/res/layout/activity_register_ip.xml
+++ b/app/src/main/res/layout/activity_register_ip.xml
@@ -26,6 +26,13 @@
                     android:layout_height="30dp"
                     android:src="@drawable/back_icon" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Регистрация ИП"
+                    android:textSize="18sp"
+                    android:textColor="#fff" />
+
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
