--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -24,7 +24,16 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Полезные сервисы"
+                    android:textSize="18sp"
+                    android:textColor="#fff" />
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
 
